fix(plan review): Fix Plan Review view text overflow. DE30302
Added conditional classes to accomodate for different heights.
In the future might need more generic approach
https://rally1.rallydev.com/#/38766052439u/detail/defect/57723780715

--- a/app/modules/core/setupWizard/planReview/_plan-review.scss
+++ b/app/modules/core/setupWizard/planReview/_plan-review.scss
@@ -1,6 +1,26 @@
 @import "plan-container";
 .wizard-plan-review {
   @extend %plan-container;
+
+  &.user-service-2 {
+    min-height:530px;
+  }
+
+  &.user-service-3 {
+    min-height:638px;
+  }
+
+  &.user-service-0.has-room-systems {
+    min-height:450px;
+  }
+
+  &.user-service-2.has-room-systems {
+    min-height:620px;
+  }
+
+   &.user-service-3.has-room-systems {
+    min-height:728px;
+  }
 }
 
 .wizard-trial-progress {
